# SailZen

./: .env.feishu.template  .env.template  .esbuild.ts  .gitignore  .npmrc  .vscode-test.mjs  AGENTS.md  CONTRIBUTING.md  FEISHU_BOT_README.md  GEMINI.md  OUTLINE_V2_UPGRADE_QUICKSTART.md  OUTLINE_V2_UPGRADE_SUMMARY.md  PRD.md  README.md  analysis_result.json  analysis_result.md  bot.example.yaml  bot.py  bot_watcher.py  check.py  check_remote_server.py  debug.py  demo.py  jest.config.base.mjs  kill_processes.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& freposmyrepoSailZen.venvScriptsActivate.ps1)  server-site-PRD.md  server.py  test_bot.py  test_sort_index_fix.py  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vscode-plugin-PRD.md
.kimix_cache/: skill_config.json
.opencode/: opencode.back.json  opencode.json
bot/: AGENT_CONTROLLER_README.md  AGENT_DOUBLE_LAYER_SETUP.md  DOC_DEMO_README.md  MIGRATION.md  agent_controller.py  async_task_manager.py  bot.example.yaml  brain.py  card_renderer.py  cards.py  config.py  context.py  conversation_bot_integration.py  conversation_manager.py  debug_feishu.py  diagnose_zombie.py  doc_demo_bot.py  feishu_agent.py  feishu_agent_integration.py  message_formatter.py  opencode_client.py  session_manager.py  session_state.py  task_logger.py  test_doc_api.py  test_feishu_bridge.py  test_opencode_client.py  verify_button.py
cli/: __init__.py  agent.py
doc/: API.md  ENV.md  KNOWN_ISSUES.md  LLM_AGENT_INTEGRATION_PLAN.md  LLM_AGENT_TODO.md  PRD.md  Page.md  README.md  ROADMAP.md  SailZen3.0.md  TESTING.md  agent_implementation_summary.md  agent_page_usage.md  agent_system_usage.md  conversation-management-design.md  conversation-management-summary.md  feishu-agent-refactoring.md  feishu-dev-bot-phase0.md  feishu-phase0-implementation-summary.md  novel_analysis_dag.md  outline_extraction_fix_summary.md  refact_todo.md  sailzen-3.0-phase-0-feishu-dev-loop.md  sailzen-3.0-phase-0-implementation-guide.md  sailzen-3.0-phase-0-task-packages.md  sailzen-3.0-roadmap.md  sailzen-3.0-task-breakdown.md  sailzen_note_doc.md
extension/: extension.ts
mobile/: app.json  package.json
patches/: remark-variables@1.4.9.patch
sail/: gateway.py  utils.py
sail_bot/: README.md  REFACTOR_SUMMARY.md  agent.py  async_task_manager.py  bot_state_manager.py  brain.py  card_renderer.py  config.py  context.py  log_formatter.py  long_output_handler.py  message_formatter.py  opencode_client.py  opencode_message_logger.py  paths.py  self_update_orchestrator.py  session_manager.py  session_state.py  task_logger.py
sail_server/: README.md  db.py  exception_handlers.py  sample_client.py
sailzen/: README.md  chapter.py  cmd.py  text.py  util.py
samples/: bot_req_knowledge.py  bot_send_message.py  use_history_events.py
scripts/: build-with-deps.js  bump-version.js  check_agent_cli.py  config.example.yaml  db_sync.py  debug_feishu.py  demo_conversation.py  demo_llm_outline_extraction.py  diagnose.py  echo_bot.py  feishu_agent.py  feishu_dev_bot.py  (+15 more)
tests/backend/: agent_client.py  agent_config.json  main.py  pipeline.db  pyproject.toml
tests/backend/app/: database.py  main.py
tests/backend/app/models/: __init__.py  agent_models.py  agent_schemas.py  db_models.py  schemas.py
tests/backend/app/routers/: agents.py  pipelines.py  runs.py  sse.py
tests/backend/app/services/: agent_manager.py  executor.py  mock_skills.py  pipeline_loader.py
tests/backend/data/: pipelines.json
(+748 files in other folders)
