[project]
name = "sailserver"
version = "0.2.0"
description = "My Personal SailServer for daily management"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "feishu-card-kit",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "litestar>=2.15.2",
    "lark-oapi>=1.5.0",
    "matplotlib>=3.10.3",
    "msgspec>=0.20.0",
    "nanoid>=2.0.0",
    "numpy>=2.2.5",
    "openai>=2.16.0",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
    "websockets>=15.0.0",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool.uv.workspace]
members = ["packages/feishu-card-kit"]

[tool.uv.sources]
feishu-card-kit = { workspace = true }

[tool.pytest.ini_options]
python_paths=[
    "."
]
testpaths = [
    "tests",
]
addopts = [
    "--tb=short",
    "--disable-warnings",
    "-p no:warnings",
    "-p no:cacheprovider",
]
markers = [
    "asyncio: mark test as asyncio",
    "server: mark test as server",
    "current: mark test as current",
    "app: mark test as app",
]
