[project]
name = "pipeline-backend"
version = "0.1.0"
description = "Pipeline Runner Backend"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --port 8000"
